[metadata]
name = zero_buffer
summary = A fast, no-copy, buffer for Python
description-file =
    README.rst
author = Alex Gaynor and David Reid
author-email = alex.gaynor@gmail.com
home-page = https://github.com/alex/zero_buffer
license = BSD
ext_module = zero_buffer

[build_sphinx]
all_files = 1
source-dir = docs

[pytest]
norecursedirs = *.egg .tox

[flake8]
exclude = .tox/,docs/
